--- a/bower.json
+++ b/bower.json
@@ -25,7 +25,7 @@
     "angular-scenario": ">=1.2.*"
   },
   "resolutions": {
-    "angular": "~1.4.4",
+    "angular": "1.3.x",
     "angular-material": "~0.9.6"
   }
 }
