--- a/bower.json
+++ b/bower.json
@@ -18,7 +18,8 @@
     "angular-material": "~0.9.6",
     "angular-material-icons": "~0.4.0",
     "angular-messages": "~1.4.2",
-    "ng-tags-input": "~2.3.0"
+    "ng-tags-input": "~2.3.0",
+    "bootstrap-ui-datetime-picker": "~2.0.4"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
@@ -26,6 +27,6 @@
   },
   "resolutions": {
     "angular": "1.3.x",
-    "angular-material": "1.0.0-rc5"
+    "angular-bootstrap": "~0.14.0"
   }
 }
