--- a/bower.json
+++ b/bower.json
@@ -19,7 +19,8 @@
     "angular-material-icons": "~0.4.0",
     "angular-messages": "~1.4.2",
     "ng-tags-input": "~2.3.0",
-    "bootstrap-ui-datetime-picker": "~2.0.4"
+    "bootstrap-ui-datetime-picker": "~2.0.4",
+    "ng-img-crop": "0.3.2"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
