--- a/bower.json
+++ b/bower.json
@@ -20,7 +20,9 @@
     "angular-messages": "~1.4.2",
     "ng-tags-input": "~2.3.0",
     "bootstrap-ui-datetime-picker": "~2.0.4",
-    "ng-img-crop": "0.3.2"
+    "ng-img-crop": "0.3.2",
+    "ng-file-upload": "~11.0.2",
+    "ng-file-upload-shim": "~11.0.2"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
