--- a/bower.json
+++ b/bower.json
@@ -22,11 +22,14 @@
     "bootstrap-ui-datetime-picker": "~2.0.4",
     "ng-img-crop-full-extended": "0.3.2",
     "ng-file-upload": "~11.0.2",
-    "ng-file-upload-shim": "~11.0.2"
+    "ng-file-upload-shim": "~11.0.2",
+    "ng-img-crop-full-extended": "git://github.com/CrackerakiUA/ngImgCropExtended.git"
+
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
     "angular-scenario": ">=1.2.*"
+
   },
   "resolutions": {
     "angular": "1.3.x",
