--- a/bower.json
+++ b/bower.json
@@ -5,7 +5,6 @@
     "angular": "1.4.4",
     "json3": "~3.3.1",
     "es5-shim": "~3.0.1",
-    "jquery": "~1.11.0",
     "bootstrap": "~3.1.1",
     "angular-resource": ">=1.2.*",
     "angular-cookies": ">=1.2.*",
@@ -20,20 +19,16 @@
     "angular-messages": "~1.4.2",
     "ng-tags-input": "~2.3.0",
     "bootstrap-ui-datetime-picker": "~2.0.4",
-    "ng-img-crop-full-extended": "0.4.9",
+    "ng-img-crop-full-extended": "git://github.com/CrackerakiUA/ngImgCropExtended.git",
     "ng-file-upload": "~11.0.2",
-    "ng-file-upload-shim": "~11.0.2",
-    "ng-img-crop-full-extended": "git://github.com/CrackerakiUA/ngImgCropExtended.git"
-
+    "ng-file-upload-shim": "~11.0.2"
   },
   "devDependencies": {
     "angular-mocks": ">=1.2.*",
     "angular-scenario": ">=1.2.*"
-
-
   },
   "resolutions": {
-    "angular": "1.3.x",
+    "angular": "^1.4.9",
     "angular-bootstrap": "~0.11.0"
   }
 }
