--- a/package.json
+++ b/package.json
@@ -84,7 +84,7 @@
     "time-grunt": "~0.3.1"
   },
   "engines": {
-    "node": ">=0.10.0"
+    "node": "^0.10.0"
   },
   "scripts": {
     "start": "node server/app.js",
